--- a/views/DoctorPages/docMaterials.ejs
+++ b/views/DoctorPages/docMaterials.ejs
@@ -11,7 +11,11 @@
                         <p><%= sub.subCode %></p>
                     </a>
             <% }) %>
-        <% } %>
+        <% }else{ %>
+            <div class="alert alert-success" role="alert">
+                  لا يوجد مواد متاحه اك الأن ....
+            </div>
+            <% } %>
     </div>
 </div>
 
