--- a/views/StudentPages/studentSubMaterial.ejs
+++ b/views/StudentPages/studentSubMaterial.ejs
@@ -10,7 +10,11 @@
               <%= index +1 %> - <%= pdf %>
             </a>
           </div>
-          <% }) %> <% } %>
+          <% }) %> <% }else{ %>
+            <div class="alert alert-success" role="alert">
+                  لا يوجد ملفات بعد....
+            </div>
+            <% } %>
       </div>
 
 
