--- a/views/adminAbsence.ejs
+++ b/views/adminAbsence.ejs
@@ -6,7 +6,7 @@
             <% subjects.map((sub)=>{ %>
                     <a href="/adminAbsence/<%= sub.subName %>" class="sub mb-5">
                         <p><%= sub.subName %></p>
-                        <p><%= sub.deptName %></p>
+                        <p><i class="fa-solid fa-download"></i> تنزيل الملف</p>
                         <p><%= sub.subDoc %></p>
                     </a>
             <% }) %>
